Fix overlay alignment to work properly in OBS

--- a/styles/overlay.css
+++ b/styles/overlay.css
@@ -4,17 +4,16 @@ html, body {
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  display: flex;
-  align-items: top;
-  justify-content: end;
   padding: 0;
   margin: 0;
 }
 
 #overlay-container {
+  position: absolute;
   text-align: right;
   background-color: #000000aa;
   padding: 10px;
+  color: #fff;
 }
 
 #overlay-user-name {
